Refactoring, rewritten cli and added importer for KAG Karkaterer